--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,8 +3,6 @@
 #
 # For more info: https://docs.python.org/2/distutils/sourcedist.html#manifest-related-options
 
-recursive-include aws_lambda_layer
-include *.txt
-include *.rst
-exclude *.pyc
-exclude *.pyo
+include README.rst LICENSE.txt release-history.rst requirements.txt requirements-test.txt
+recursive-include aws_lambda_layer tests
+global-exclude *.py[cod]
