--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,12 +50,11 @@ jobs:
           pip install -r requirements-test.txt
           pip install .
       - name: "Run pytest"
-
         run: "python -m pytest tests --cov=aws_lambda_layer"
       # don't forget to goto codecov.io, enable your repo, copy the token
       # create an CODECOV_TOKEN env var in GitHub actions secret
-      - name: "Upload coverage to Codecov"
-        if: "contains(env.USING_COVERAGE, matrix.python-version)"
-        uses: "codecov/codecov-action@v3" # https://github.com/marketplace/actions/codecov-action
-        with:
-          fail_ci_if_error: true
+#      - name: "Upload coverage to Codecov"
+#        if: "contains(env.USING_COVERAGE, matrix.python-version)"
+#        uses: "codecov/codecov-action@v3" # https://github.com/marketplace/actions/codecov-action
+#        with:
+#          fail_ci_if_error: true
